BUGFIX: overflow hidden messes stuff up for chrome on mac

--- a/app/assets/stylesheets/desktop/header.scss
+++ b/app/assets/stylesheets/desktop/header.scss
@@ -152,7 +152,6 @@
 
 .d-dropdown {
   display: none;
-  overflow: hidden;
   width: 320px;
   position: absolute;
   top: 100%;
