--- a/app/assets/stylesheets/mobile/header.scss
+++ b/app/assets/stylesheets/mobile/header.scss
@@ -143,7 +143,6 @@
 
 .d-dropdown {
   display: none;
-  overflow: hidden;
   width: 290px;
   position: absolute;
   top: 100%;
